# LearningOpenGL

./: CMakeLists.txt  README.md
res/shaders/: basic.frag  basic.vert  light.vert  obj.frag  obj.vert
src/: glad.c  lighting.c  main.c
src/engine/: camera.c  camera.h  window.c  window.h
src/renderer/: index_buf.c  index_buf.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  vert_array.c  vert_array.h  vert_buf.c  vert_buf.h
src/util/: debug.c  debug.h  types.h  vector.h
